src/mobilecss/navbar.css
.navbar-style {
  padding: 10px 0;
}

.ul-style {
  list-style: none;
  display: flex;
  justify-content: center;
}

.li-style {
  margin: 0 20px;
}

.link-style {
  text-transform: uppercase;
  color: #fff;
  font-weight: 800;
  text-decoration: none;
  transition: color 0.3s;
  font-size: 14px;
}

/* Media query for phones */
/* stylelint-disable-next-line media-feature-range-notation */
@media (max-width: 1024px) {
  .navbar-style {
    padding: 20px 0;
  }

  /* Hide the unordered list on Desktop */
  .ul-style {
    display: none;
  }

  /* Styles for the phone menu button */
  .phone-menu-button {
    position: absolute;
    background-color: transparent;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
    color: #fff;
  }

  .close-phone-menu-button {
    position: absolute;
    top: 35px;
    left: 15px;
    z-index: 2;
    width: 60px;
    height: 60px;
    background-color: transparent;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
    color: #fff;
  }
}

/* Styles for the open menu button icon */
.menu-icon.open {
  background-color: transparent;
}

/* Styles for the phone menu */
.phone-menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #222;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
  list-style: none;
  margin: 0;
  padding: 0;
  z-index: 1;
}

.phone-menu-item {
  width: 100%;
  height: 60px;
  padding-left: 5rem;
}

.i {
  font-size: 30px;
}

/* stylelint-disable-next-line media-feature-range-notation */
@media (min-width: 1025px) {
  .phone-menu-button {
    display: none;
  }
}

